# isolatedFunc-1

./: CMakeLists.txt  isolated-1.c  isolated-2.c  isolated-3.c
.github/workflows/: codeql-analysis.yml
codeql/queries/: buffer_overflow.ql  use_after_free.ql
